add pybay talk.

--- a/index.html
+++ b/index.html
@@ -82,39 +82,48 @@
 							</div>
 							<div class="6u$ 12u$(medium)">
                                 <br>
-								<p> I am a Data Scientist at <a href = "https://www.zymergen.com/"> Zymergen, Inc. </a> after having a full career as a mathematics professor.  At Zymergen, my work is part of 3 patents, and is focused on simultaneously increasing the information we get (using statistical rigor and machine learning best practices) and reducing the time it takes us to get that information.  Check out my industry resume, and some of the data science work I've done. </p>
 
-<p> <a href = "https://www.insightdatascience.com//">Insight Data Science </a> fueled my transition from academia to industry.  Most recently, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at 
-                                    <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/">Colorado College </a>.   
+				<p> I am a Data Scientist at <a href = "https://www.zymergen.com/"> Zymergen, Inc. </a> after having a full career as a mathematics professor.  At Zymergen, my work is part of 3 patents, and is focused on simultaneously increasing the information we get (using statistical rigor and machine learning best practices) and reducing the time it takes us to get that information.  Check out my industry resume, and some of the data science work I've done. </p>
+
+				<p> <a href = "https://www.insightdatascience.com//">Insight Data Science </a> fueled my transition from academia to industry.  Most recently, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/">Colorado College </a>.   
                                 </p>
 							</div>
 						</div>
 					</div>
 				</section>
 
+				<section id="projects" class="wrapper style2 special">
+				  <header class="major special">
+				    <h2>Independent and Public Projects</h2>
+				  </header>
 
-	<section id="projects" class="wrapper style2 special">
-				<header class="major special">
-							<h2>Projects</h2>
-						</header>
-            <div class="feature">
-                                <div class="image"></a>
-                                    <img src="images/insight.png" style="max-width: 150px" alt="" />
-                                </div>
-                                <div class="content">
-                                    <header>
-                                         <h4>H2OhNo! A consulting project for Valor Water Analytics</h4>
-                                     </header>
-                                        <iframe allowfullscreen="true" allowtransparency="true" frameborder="0" height="611" id="talk_frame_349111" mozallowfullscreen="true" src="//speakerdeck.com/player/5d11aa75bca243eb9de0d014faf87edd" style="border:0; padding:0; margin:0; background:transparent;" webkitallowfullscreen="true" width="710"> </iframe>
-        </div>
-        <div class="feature">
-            <div class="content">
-                <br>
-                <br>
-            </div>
-        </div>
-							     <div class="feature">
-								<div class="image rounded">
+<div class="feature">
+<div class="content">
+  <header>
+    <h4>Robots, Biology and Unsupervised Model Selection <a href =  https://pybay.com/> PyBay, 2018 </a></h4>
+  </header>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/gOSz5SFJAI4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<div class="feature">
+  <div class="image"></a>
+<img src="images/insight.png" style="max-width: 150px" alt="" />
+</div>
+<div class="content">
+  <header>
+    <h4>H2OhNo! A consulting project for Valor Water Analytics</h4>
+  </header>
+  <iframe allowfullscreen="true" allowtransparency="true" frameborder="0" height="611" id="talk_frame_349111" mozallowfullscreen="true" src="//speakerdeck.com/player/5d11aa75bca243eb9de0d014faf87edd" style="border:0; padding:0; margin:0; background:transparent;" webkitallowfullscreen="true" width="710"> </iframe>
+</div>
+
+<div class="feature">
+  <div class="content">
+    <br>
+    <br>
+  </div>
+</div>
+<div class="feature">
+  <div class="image rounded">
                                     <a href="https://github.com/ameliajtaylor/kaggle-shelteranimals">
                                         <img src="images/animal-dog-pet-eyes.jpg" style="max-width: 150px" alt="" />
                                     </a>
