--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<div class="6u$ 12u$(medium)">
                                 <br>
 
-				<p> I am a Data Scientist at <a href = "https://www.zymergen.com/"> Zymergen, Inc. </a> after having a full career as a mathematics professor.  At Zymergen, my work is part of 2 pending patents, and is focused on simultaneously increasing the information we get (using statistical rigor and machine learning best practices) and reducing the time it takes us to get that information.  Check out my industry resume, and some of the data science work I've done. </p>
+				<p> I am a Staff Data Scientist at <a href = "https://www.zymergen.com/"> Zymergen, Inc. </a> after having a full career as a mathematics professor.  At Zymergen, my work is part of 3 pending patents, and is focused on simultaneously increasing the information we get (using statistical rigor and machine learning best practices) and reducing the time it takes us to get that information.  Check out my industry resume, and some of the data science work I've done. </p>
 
 				<p> <a href = "https://www.insightdatascience.com//">Insight Data Science </a> fueled my transition from academia to industry.  Most recently, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/">Colorado College </a>.   
                                 </p>
@@ -91,6 +91,22 @@
 						</div>
 					</div>
 				</section>
+
+<section id = "Media" class="wrapper style2 special">
+				  <header class="major special">
+				    <h2>Zymergen Media </h2>
+				  </header>
+				  <div class="feature">
+				
+<div class="content">
+  <header>
+<h4>Employee Spotlight <a href = https://www.zymergen.com/employee-spotlights/amelia-taylor/ </a></h4>
+</header>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/gOSz5SFJAI4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+
+https://www.zymergen.com/blog/technology/robots-biology-and-unsupervised-model-selection/
 
 				<section id="projects" class="wrapper style2 special">
 				  <header class="major special">
