update intro to add shopify

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<div class="6u$ 12u$(medium)">
                                 <br>
 
-				<p> I am a Staff Data Scientist at <a href = "https://www.zymergen.com/"> Zymergen, Inc. </a> after having a full career as a mathematics professor.  At Zymergen, my work is part of 3 pending patents, and is focused on simultaneously increasing the information we get (using statistical rigor and machine learning best practices) and reducing the time it takes us to get that information.  Check out my industry resume, and some of the data science work I've done. </p>
+				<p> I am a Staff Data Scientist at <a href = "https://www.shopify.com/"> Shopify </a> after having a full career as a mathematics professor and growing as an industry data scientist at  <a href = "https://www.zymergen.com/"> Zymergen, Inc.</a> At Shopify I design and analyze experiments and delivery product insights. My work at Zymergen is part of 3 pending patents, and was focused on simultaneously increasing the information we get (using statistical rigor and machine learning best practices) and reducing the time it takes us to get that information.  Check out my industry resume, and some of the data science work I've done. </p>
 
 				<p> <a href = "https://www.insightdatascience.com//">Insight Data Science </a> fueled my transition from academia to industry.  Most recently, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/">Colorado College </a>.   
                                 </p>
