--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-                <h1><strong><a href="index.html">Data Scientist who recently made a fast transition from a full academic career</a></strong> </h1>
+                <h1><strong><a href="index.html">Data Scientist who made a fast transition from a full academic career</a></strong> </h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -83,9 +83,9 @@
 							<div class="6u$ 12u$(medium)">
                                 <br>
 
-				<p> I am a Staff Data Scientist at <a href = "https://www.shopify.com/"> Shopify </a> after having a full career as a mathematics professor and growing as an industry data scientist at  <a href = "https://www.zymergen.com/"> Zymergen, Inc.</a> At Shopify I design and analyze experiments and delivery product insights. My work at Zymergen is part of 3 pending patents, and was focused on simultaneously increasing the information we get (using statistical rigor and machine learning best practices) and reducing the time it takes us to get that information.  Check out my industry resume, and some of the data science work I've done. </p>
+				<p> I am a Staff Data Scientist at <a href = "https://www.shopify.com/"> Shopify </a> after having a full career as a mathematics professor and growing as an industry data scientist at  <a href = "https://www.zymergen.com/"> Zymergen, Inc.</a> At Shopify, I design and analyze experiments and delivery product insights. My work at Zymergen is part of 3 pending patents, and was focused on simultaneously increasing the information we gathered (using statistical rigor and machine learning best practices) and reducing the time it takes us to get that information.  Check out my industry resume, and some of the data science work I've done. </p>
 
-				<p> <a href = "https://www.insightdatascience.com//">Insight Data Science </a> fueled my transition from academia to industry.  Most recently, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/">Colorado College </a>.   
+				<p> <a href = "https://www.insightdatascience.com//">Insight Data Science </a> fueled my transition from academia to industry.  Prior to that, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/">Colorado College </a>.   
                                 </p>
 							</div>
 						</div>
