make banner a bit smaller

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Amelia Taylor - Homepage</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
+  <head>
+    <title>Amelia Taylor - Homepage</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
 
-        <!-- MathJax options -->
-        <script type="text/x-mathjax-config">
+     <!-- MathJax options -->
+      <script type="text/x-mathjax-config">
           MathJax.Hub.Config({
             tex2jax: {
               inlineMath: [ ['$','$'], ["\\(","\\)"] ],
@@ -25,7 +25,7 @@
               processEscapes: true
             }
           });
-        </script>
+       </script>
 
         <!-- Google tracking -->
        <!--- <script>
@@ -37,60 +37,63 @@
           ga('create', 'UA-65368616-1', 'auto');
           ga('send', 'pageview');
         </script> --->
-        <script src="https://use.fontawesome.com/978bb11bb3.js"></script>
+    <script src="https://use.fontawesome.com/978bb11bb3.js"></script>
+    <script type="text/javascript" 
+      src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
 
-        <script type="text/javascript"
-            src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-        </script>
+    <noscript>
+	<link rel="stylesheet" href="css/skel.css" />
+	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/style-xlarge.css" />
+    </noscript>
+  </head>
+<body class="landing">
+  <!-- Header -->
+  <header id="header" class="alt">
+    <h1><strong><a href="index.html">Data Scientist who made a fast transition from a full academic career</a></strong> </h1>
+    <nav id="nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <!---<li><a href="blog.html">Blog</a></li> --->
+        <li><a href="resume/AmeliaResume.pdf">Resume</a></li>
+        <!--- <li><a href="AmeliaTaylorCV.pdf">Resume</a></li> --->
+      </ul>
+    </nav>
+  </header>
 
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-xlarge.css" />
-		</noscript>
-	</head>
-	<body class="landing">
+<!-- Banner -->
+  <section id="banner">
+    <h2>Amelia Taylor</h2>
+    <!-- <p>Data, decisions and learning</p> -->
+  </section>
 
-		<!-- Header -->
-			<header id="header" class="alt">
-                <h1><strong><a href="index.html">Data Scientist who made a fast transition from a full academic career</a></strong> </h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-                        <!---<li><a href="blog.html">Blog</a></li> --->
-						<li><a href="resume/AmeliaResume.pdf">Resume</a></li>
-                       <!--- <li><a href="AmeliaTaylorCV.pdf">Resume</a></li> --->
-					</ul>
-				</nav>
-			</header>
+  <!-- About me -->
+  <section id="about" class="wrapper style1">
+    <div class="container 75%">
+      <div class="row 200%">
+        <div class="6u 12u$(medium)">
+	  <header class="major">
+	    <h2>About me</h2>
+	    <div class="11u"><span class="image fit"><img src="images/professionalPhoto.JPG" style="max-width: 220px" alt="" /></span>
+            </div>
+	 </header>
+	</div>
+        <div class="6u$ 12u$(medium)">
+          <br>
+          <p> I am a Staff Data Scientist at <a href = "https://www.shopify.com/"> Shopify </a> after having a full 
+              career as a mathematics professor and growing as an industry data scientist at  <a href = "https://www.zymergen.com/"> 
+              Zymergen, Inc.</a> At Shopify, I design and analyze experiments and delivery product insights. My work at Zymergen is 
+              part of 3 pending patents, and was focused on simultaneously increasing the information we gathered (using statistical 
+              rigor and machine learning best practices) and reducing the time it takes us to get that information.  Check out my 
+              industry resume, and some of the data science work I've done. </p>
 
-		<!-- Banner -->
-			<section id="banner">
-				<h2>Amelia Taylor</h2>
-				<!-- <p>Data, decisions and learning</p> -->
-			</section>
-
-			<!-- About me -->
-				<section id="about" class="wrapper style1">
-					<div class="container 75%">
-						<div class="row 100%">
-							<div class="6u 12u$(medium)">
-								<header class="major">
-									<h2>About me</h2>
-									<div class="11u"><span class="image fit"><img src="images/professionalPhoto.JPG" style="max-width: 220px" alt="" /></span></div>
-								</header>
-							</div>
-							<div class="6u$ 12u$(medium)">
-                                <br>
-
-				<p> I am a Staff Data Scientist at <a href = "https://www.shopify.com/"> Shopify </a> after having a full career as a mathematics professor and growing as an industry data scientist at  <a href = "https://www.zymergen.com/"> Zymergen, Inc.</a> At Shopify, I design and analyze experiments and delivery product insights. My work at Zymergen is part of 3 pending patents, and was focused on simultaneously increasing the information we gathered (using statistical rigor and machine learning best practices) and reducing the time it takes us to get that information.  Check out my industry resume, and some of the data science work I've done. </p>
-
-				<p> <a href = "https://www.insightdatascience.com//">Insight Data Science </a> fueled my transition from academia to industry.  Prior to that, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/">Colorado College </a>.   
-                                </p>
-							</div>
-						</div>
-					</div>
-				</section>
+	 <p> <a href = "https://www.insightdatascience.com//">Insight Data Science </a> fueled my transition from academia to industry.  Prior to that, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/">Colorado College </a>.   
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 
 <section id = "Media" class="wrapper style2 special">
 				  <header class="major special">
